Causeview Package Complete/ant script/retrieveUnpackaged/objects/HTML_Editor__c.object
<CustomObject>
    <fields>
        <fullName>Recepient__c</fullName>
        <label>Recepient</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_To_Object__c</fullName>
        <label>Related To Object</label>
        <picklist>
            <picklistValues>
                <fullName>Receipt__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rich_Field__c</fullName>
        <label>Rich Field</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>HTML Editor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>HTML Editor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HTML Editors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>